# ringonit

./: .gitignore  App.jsx  LICENSE  Makefile  api.js  deploy_frontend.sh  i18n.js  index.html  index.jsx  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
app/: layout.tsx  page.tsx
backend/authorizer/: Cargo.toml  Makefile
backend/authorizer/src/: main.rs
backend/hearts/: Cargo.toml  Makefile
backend/hearts/src/: main.rs
backend/refresh/: Cargo.toml  Makefile
backend/refresh/src/: main.rs
backend/signin/: Cargo.toml  Makefile  Payload.json
backend/signin/src/: main.rs
backend/signout/: Cargo.toml
backend/signout/src/: main.rs
backend/signup/: Cargo.toml  Makefile
backend/signup/src/: main.rs
backend/userinfo/: Cargo.toml  Makefile
backend/userinfo/src/: main.rs
components/: VerificationCodeInput.jsx  VerificationCodeInput.tsx  VerificationCodeInputs.jsx  VerificationCodeInputs.tsx  confirmationcode.jsx  confirmationcode.tsx  counter.jsx  discovery.jsx  discovery.tsx  downloadCalendar.jsx  firstSection.jsx  firstSection.tsx  fourthSection.jsx  heart.css  heart.jsx  heart.tsx  icons.jsx  icons.tsx  laNostraGiornataCard.jsx  laNostraGiornataCard.tsx  navbar.jsx  navbar.tsx  phone.css  phone.jsx  phone.tsx  primitives.ts  profilecard.jsx  profilecard.tsx  rsvp.jsx  rsvp.tsx  secondSection.jsx  secondSection.tsx  signin.jsx  signin.tsx  thirdSection.jsx  thirdSection.tsx  toast.jsx  useOnScreenHook.jsx  useOnScreenHook.tsx
config/: site.ts
locale/: de.json  en.json  it.json  ro.json
