[package]
name = "userinfo"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.deploy]
memory = 128                
timeout = 10                 
tracing = "active"            
role = "ringonit_lambda_role"      
env_file = ".env" 

[dependencies]
anyhow = "1.0.71"
simple-error = "0.2.3"
lambda_runtime = "0.8.0"
lambda_http = { version = "0.8.1", default-features = false, features = ["apigw_http"] }
serde = { version = "1.0.145", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros"] }
serde_json = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
dotenv = "0.15.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_27"] }
aws-config = "0.55.2"
aws-sdk-dynamodb = "0.27.0"
openssl = { version = "0.10", features = ["vendored"] }
aws-sdk-secretsmanager = "0.27.0"
base64 = "0.21.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
jsonwebtoken = "8.3.0"
chrono = { version = "0.4.24", features = ["serde"] }
axum-extra = { version = "0.7.2", features = ["cookie"] }
time = "0.3.20"